--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,9 +6,8 @@
         icon="pi pi-plus"
         (click)="toggleAddPopup()"
         label="Add Product"
-    >
-    
-    </button>
+        class="add-product-btn"
+    ></button>
 
     <div class="row wrap gap-1 space-between">
         <app-product 
